# truth-table

./: README.md  run-test.ps1  truth-table.cabal
src/: TruthTable.hs
src/TruthTable/: Impl.hs  WFF.hs  WWF.hs
test/: SpecHelper.hs
test/TruthTable/: TruthTableSpec.hs  WFFSpec.hs  WWFSpec.hs
testsuite/tests/TruthTable/: Tests.hs
