name:                truth-table
version:             0.1.0.0
synopsis:            A library for generating and printing truth tables for boolean expressions
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Adam Schønemann
maintainer:          adamschoenemann@gmail.com
-- copyright:
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules: TruthTable
  other-modules: TruthTable.Impl, TruthTable.WFF
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8, containers
  hs-source-dirs:      src, src/TruthTable
  default-language:    Haskell2010

Test-Suite test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: src, test
    build-depends: base, hspec, containers, truth-table, QuickCheck
    default-language: Haskell2010
    ghc-options: -Wall